feat: make PWA corretly and change footer

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
             rel="stylesheet"
             href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,800,900&display=swap"
     />
-    <title>Диплом</title>
+    <title>Диплом @shzFas</title>
   </head>
   <body>
     <div id="root"></div>
